[package]
name = "ethsbell-discord-webhooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethsbell-rewrite = {git = "https://github.com/codeths/ethsbell-rewrite", default-features = false}
structopt = "0.3.26"
chrono = "0.4.22"
tokio = {version = "1.20.1", features = ["full"]}
reqwest = "0.11.11"
serde_json = "1.0.85"